--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,163 @@
 @import "./components/reseter";
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Syne+Mono&family=Ubuntu+Mono&display=swap");
+
+$font1: "Lato", sans-serif;
+$font2: "Syne Mono", monospace;
+$font3: "Ubuntu Mono", monospace;
+$back-color: #1e1e1e;
+
+/*  
+============
+Layout
+============
+*/
+
+body::before {
+  content: "";
+  opacity: 0.5;
+  position: fixed;
+  background: url("../../img/background.jpg") no-repeat center fixed;
+  background-size: cover;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: -1;
+}
+
+body {
+  color: rgb(209, 209, 212);
+  background-color: rgba(131, 243, 3, 0.582);
+  font-size: 1.125rem;
+  font-family: $font3;
+}
+
+.container {
+  max-width: 900px;
+  // text-align: center;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  height: 100vh;
+}
+
+section {
+  // border: 2px solid green;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
+  height: fit-content;
+  background-color: $back-color;
+  padding: 1em;
+  min-width: 150px;
+  -webkit-box-shadow: 1px 2px 5px 3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 2px 5px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 2px 5px 3px rgba(0, 0, 0, 0.75);
+  min-height: 50%;
+}
+
+h1 {
+  font-family: $font2;
+  font-size: 4rem;
+  // margin-bottom: 0.5em;
+}
+
+@media screen and (max-width: 400px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+}
+form {
+  display: flex;
+  // border: 2px solid magenta;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  label {
+    font-size: 1.5rem;
+  }
+  .form-item {
+    margin-top: 1em;
+  }
+}
+
+.message {
+  font-size: 1rem;
+  margin-top: 1em;
+  color: rgb(243, 116, 116);
+  font-weight: 700;
+}
+
+.radioBtn {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+}
+
+.btn {
+  transition: all 300ms;
+  cursor: pointer;
+  outline: 0;
+  border: none;
+  font-family: $font3;
+  text-transform: uppercase;
+  color: rgb(209, 209, 212);
+  background-color: #727171;
+  font-size: 1.4rem;
+  padding: 0.3em;
+  &:hover {
+    background: #c1e7fa;
+    color: rgb(36, 35, 35);
+  }
+}
+// @media only screen and (max-width: 400px) {
+//   .container {
+//     min-width: auto;
+//     max-width: auto;
+//     width: 80vw;
+//   }
+// }
+
+article {
+  font-size: 1rem;
+  margin-top: 1em;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  textarea {
+    resize: none;
+    max-width: 100%;
+  }
+}
+
+#wordLength {
+  font-size: 2rem;
+  width: 8rem;
+}
+
+.btn-copy {
+  transition: all 300ms;
+  cursor: pointer;
+  outline: 0;
+  border: none;
+  font-family: $font1;
+  text-transform: uppercase;
+  color: rgb(32, 32, 32);
+  background-color: #e9dd38;
+  font-size: 1rem;
+  padding: 0.3em;
+  &:hover {
+    background: #eedf0e;
+  }
+  margin-bottom: 1em;
+}
+
+.activeCopy {
+  color: brown;
+  font-weight: 900;
+}
