--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,9 +1,154 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Syne+Mono&family=Ubuntu+Mono&display=swap");
 *,
 ::after,
 ::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+/*  
+============
+Layout
+============
+*/
+body::before {
+  content: "";
+  opacity: 0.5;
+  position: fixed;
+  background: url("../../img/background.jpg") no-repeat center fixed;
+  background-size: cover;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: -1;
+}
+
+body {
+  color: #d1d1d4;
+  background-color: rgba(131, 243, 3, 0.582);
+  font-size: 1.125rem;
+  font-family: "Ubuntu Mono", monospace;
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  height: 100vh;
+}
+
+section {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
+  height: fit-content;
+  background-color: #1e1e1e;
+  padding: 1em;
+  min-width: 150px;
+  -webkit-box-shadow: 1px 2px 5px 3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 2px 5px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 2px 5px 3px rgba(0, 0, 0, 0.75);
+  min-height: 50%;
+}
+
+h1 {
+  font-family: "Syne Mono", monospace;
+  font-size: 4rem;
+}
+
+@media screen and (max-width: 400px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+}
+form {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+form label {
+  font-size: 1.5rem;
+}
+form .form-item {
+  margin-top: 1em;
+}
+
+.message {
+  font-size: 1rem;
+  margin-top: 1em;
+  color: #f37474;
+  font-weight: 700;
+}
+
+.radioBtn {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+}
+
+.btn {
+  transition: all 300ms;
+  cursor: pointer;
+  outline: 0;
+  border: none;
+  font-family: "Ubuntu Mono", monospace;
+  text-transform: uppercase;
+  color: #d1d1d4;
+  background-color: #727171;
+  font-size: 1.4rem;
+  padding: 0.3em;
+}
+.btn:hover {
+  background: #c1e7fa;
+  color: #242323;
+}
+
+article {
+  font-size: 1rem;
+  margin-top: 1em;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+article textarea {
+  resize: none;
+  max-width: 100%;
+}
+
+#wordLength {
+  font-size: 2rem;
+  width: 8rem;
+}
+
+.btn-copy {
+  transition: all 300ms;
+  cursor: pointer;
+  outline: 0;
+  border: none;
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  color: #202020;
+  background-color: #e9dd38;
+  font-size: 1rem;
+  padding: 0.3em;
+  margin-bottom: 1em;
+}
+.btn-copy:hover {
+  background: #eedf0e;
+}
+
+.activeCopy {
+  color: brown;
+  font-weight: 900;
 }
 
 /*# sourceMappingURL=App.css.map */
