optimized some styles

--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -57,6 +57,11 @@ section {
   min-height: 50%;
 }
 
+/*
+===========
+Typography
+===========
+*/
 h1 {
   font-family: "Syne Mono", monospace;
   font-size: 4rem;
